Enhanced the font style of the Ratings paragraph element.  However, still need to fix two outstanding items.  Aligning the gifs so they're displayed 2 or three per row, and debugging the issue preventing more than 20 gifs to appear at any given time.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -115,9 +115,30 @@ img {
     position: relative;
     align-content: center;
     margin: 5px;
+}
 
+.gifs img {
+   margin-bottom: 25px;
+   margin-top: 5px;
+   margin-right: 5px;
+   height: auto;
+   display: grid;
+   grid-template-columns: repeat(2, auto) ;
 
 }
+
+/* This selector controls the Ratings visual characteristics */
+.gifs p {
+    font-family: 'Michroma', sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+    padding: 0;
+    margin-bottom: 0;
+    display: inline-block;
+    text-align: justify;
+    display: grid;
+    grid-template-columns: repeat(2, auto) ; 
+} 
 
 /* Font families inventory:
 font-family: 'Inconsolata', monospace;
